cert-manager-lets-encrypt/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
spec:
  entryPoints:
  - web
  reoutes:
  - matchs: Host(`devopsmt.com.br`)
    kind: Rule
    services:
    - name: nginx-service
      port: 80
